--- a/Demo.WebApi/Properties/launchSettings.json
+++ b/Demo.WebApi/Properties/launchSettings.json
@@ -1,9 +1,10 @@
 ﻿{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63462",
+      "applicationUrl": "http://localhost:60622",
       "sslPort": 0
     }
   },
@@ -11,13 +12,15 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "student/students",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Demo.Mvc": {
+    "Demo.WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "student/students",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
