--- a/Demo.WebApi/appsettings.json
+++ b/Demo.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "demo": "Server=.;Database=Demo;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Demo": "Server=.;Database=Demo;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
