--- a/Demo.WebApi/appsettings.json
+++ b/Demo.WebApi/appsettings.json
@@ -9,5 +9,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ElasticSearch": {
+    "UserName": "elastic",
+    "PassWord": "septnet",
+    "Urls": [ "" ],
+    "DefaultIndex": "elastic_search_default_index"
+  },
+  "RabbitMq": {
+    "Connection": {
+      "hostName": "47.101.70.119",
+      "userName": "guest",
+      "password": "guest",
+      "port": "5672",
+      "virtualHost": "/"
+    }
+  }
 }
