--- a/Src/Demo.Adapter/Demo.Adapter.csproj
+++ b/Src/Demo.Adapter/Demo.Adapter.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Core.ElasticSearch" Version="3.1.9.11" />
+  </ItemGroup>
+
 </Project>
