--- a/Src/Demo.Persistence/Demo.Persistence.csproj
+++ b/Src/Demo.Persistence/Demo.Persistence.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Core.EntityFrameworkCore" Version="3.1.9.11" />
+    <PackageReference Include="Core.EntityFrameworkCore" Version="3.1.9.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
   </ItemGroup>
 
