--- a/src/Demo.WebApi/Demo.WebApi.csproj
+++ b/src/Demo.WebApi/Demo.WebApi.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Demo.Application\Demo.Application.csproj" />
+    <ProjectReference Include="..\Demo.Application\Demo.Application.csproj" />
   </ItemGroup>
 
 
